--- a/main.css
+++ b/main.css
@@ -6,7 +6,22 @@ header, footer {
     text-align: center;
 }
 
-nav, aside {
+nav {
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
+}
+
+aside {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-content: center;
+    float: left;
+    width: 10%;
+    height: 100%;
+}
+main {
+    float: right;
+    width: 90%;
 }
